force-app/main/default/objects/Product2/fields/Base_Type__c.field-meta.xml
<CustomField>
    <fullName>Base_Type__c</fullName>
    <label>Base Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Opening</fullName>
            </value>
            <value>
                <fullName>Base Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>