force-app/main/default/objects/Product2/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heat Pump</fullName>
            </value>
            <value>
                <fullName>Gaz Heater</fullName>
            </value>
            <value>
                <fullName>Electric Heater</fullName>
            </value>
            <value>
                <fullName>Solar Heater</fullName>
            </value>
            <value>
                <fullName>Water Blades</fullName>
            </value>
            <value>
                <fullName>Laminar Jets</fullName>
            </value>
            <value>
                <fullName>Swim Jet System</fullName>
            </value>
            <value>
                <fullName>Spillover Opening</fullName>
            </value>
            <value>
                <fullName>Spillover Closing</fullName>
            </value>
            <value>
                <fullName>Covers</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
                <label>Cleaning Pool</label>
            </value>
            <value>
                <fullName>Cleaning Shared</fullName>
            </value>
            <value>
                <fullName>Salt Bags</fullName>
            </value>
            <value>
                <fullName>Luxury Service</fullName>
            </value>
            <value>
                <fullName>Opening Extras</fullName>
            </value>
            <value>
                <fullName>Closing Extras</fullName>
            </value>
            <value>
                <fullName>Polywood</fullName>
            </value>
            <value>
                <fullName>Support Blocs</fullName>
            </value>
            <value>
                <fullName>Closing Extras Shared</fullName>
            </value>
            <value>
                <fullName>Opening Extras Shared</fullName>
            </value>
            <value>
                <fullName>Opening Val Mar</fullName>
            </value>
            <value>
                <fullName>Closing Val Mar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>