force-app/main/default/objects/Product2/fields/Opening_Closing__c.field-meta.xml
<CustomField>
    <fullName>Opening_Closing__c</fullName>
    <label>Opening / Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opening</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Opening Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>