force-app/main/default/objects/Product2/fields/Val_Mar_Product__c.field-meta.xml
<CustomField>
    <fullName>Val_Mar_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Val Mar Product</label>
    <type>Checkbox</type>
</CustomField>