force-app/main/default/objects/Product2/fields/Val_Mar_Required__c.field-meta.xml
<CustomField>
    <fullName>Val_Mar_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>